[gd_scene load_steps=2 format=3 uid="uid://8870v52f12g3"]

[ext_resource type="Script" uid="uid://dajujt6kce1de" path="res://Scripts/dialogue_node.gd" id="1_gxdp3"]

[node name="DialogueNode" type="GraphNode" node_paths=PackedStringArray("actor_list_button")]
custom_minimum_size = Vector2(300, 200)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -94.0
offset_right = 175.0
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2
size_flags_stretch_ratio = 4.11
title = "Dialogue Node"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 0, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(0, 0.537255, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
script = ExtResource("1_gxdp3")
actor_list_button = NodePath("Label/OptionButton")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Actor"

[node name="OptionButton" type="OptionButton" parent="Label"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 63.0
offset_right = 271.0
grow_vertical = 2

[node name="DialogueLabel" type="Label" parent="."]
layout_mode = 2
text = "Dialogue"

[node name="Dialogue" type="TextEdit" parent="DialogueLabel"]
custom_minimum_size = Vector2(150, 35)
layout_mode = 2
offset_left = -11.0
offset_top = 27.0
offset_right = 273.0
offset_bottom = 110.0
grow_vertical = 2
placeholder_text = "Dialogue here..."
emoji_menu_enabled = false
scroll_fit_content_height = true

[connection signal="item_selected" from="Label/OptionButton" to="." method="_on_option_button_item_selected"]
